; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/arch/mips/bcm63xx/extr_cs.c_bcm63xx_set_cs_base.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/arch/mips/bcm63xx/extr_cs.c_bcm63xx_set_cs_base.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@EINVAL = common dso_local global i32 0, align 4
@MPI_CSBASE_BASE_MASK = common dso_local global i32 0, align 4
@MPI_CSBASE_SIZE_SHIFT = common dso_local global i32 0, align 4
@bcm63xx_cs_lock = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @bcm63xx_set_cs_base(i32 %0, i32 %1, i32 %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca i64, align 8
  %9 = alloca i32, align 4
  store i32 %0, i32* %5, align 4
  store i32 %1, i32* %6, align 4
  store i32 %2, i32* %7, align 4
  %10 = load i32, i32* %5, align 4
  %11 = call i32 @is_valid_cs(i32 %10)
  %12 = icmp ne i32 %11, 0
  br i1 %12, label %16, label %13

13:                                               ; preds = %3
  %14 = load i32, i32* @EINVAL, align 4
  %15 = sub nsw i32 0, %14
  store i32 %15, i32* %4, align 4
  br label %53

16:                                               ; preds = %3
  %17 = load i32, i32* %7, align 4
  %18 = load i32, i32* %7, align 4
  %19 = call i32 @roundup_pow_of_two(i32 %18)
  %20 = icmp ne i32 %17, %19
  br i1 %20, label %21, label %24

21:                                               ; preds = %16
  %22 = load i32, i32* @EINVAL, align 4
  %23 = sub nsw i32 0, %22
  store i32 %23, i32* %4, align 4
  br label %53

24:                                               ; preds = %16
  %25 = load i32, i32* %7, align 4
  %26 = icmp ult i32 %25, 8192
  br i1 %26, label %30, label %27

27:                                               ; preds = %24
  %28 = load i32, i32* %7, align 4
  %29 = icmp ugt i32 %28, 268435456
  br i1 %29, label %30, label %33

30:                                               ; preds = %27, %24
  %31 = load i32, i32* @EINVAL, align 4
  %32 = sub nsw i32 0, %31
  store i32 %32, i32* %4, align 4
  br label %53

33:                                               ; preds = %27
  %34 = load i32, i32* %6, align 4
  %35 = load i32, i32* @MPI_CSBASE_BASE_MASK, align 4
  %36 = and i32 %34, %35
  store i32 %36, i32* %9, align 4
  %37 = load i32, i32* %7, align 4
  %38 = call i32 @ilog2(i32 %37)
  %39 = call i32 @ilog2(i32 8192)
  %40 = sub nsw i32 %38, %39
  %41 = load i32, i32* @MPI_CSBASE_SIZE_SHIFT, align 4
  %42 = shl i32 %40, %41
  %43 = load i32, i32* %9, align 4
  %44 = or i32 %43, %42
  store i32 %44, i32* %9, align 4
  %45 = load i64, i64* %8, align 8
  %46 = call i32 @spin_lock_irqsave(i32* @bcm63xx_cs_lock, i64 %45)
  %47 = load i32, i32* %9, align 4
  %48 = load i32, i32* %5, align 4
  %49 = call i32 @MPI_CSBASE_REG(i32 %48)
  %50 = call i32 @bcm_mpi_writel(i32 %47, i32 %49)
  %51 = load i64, i64* %8, align 8
  %52 = call i32 @spin_unlock_irqrestore(i32* @bcm63xx_cs_lock, i64 %51)
  store i32 0, i32* %4, align 4
  br label %53

53:                                               ; preds = %33, %30, %21, %13
  %54 = load i32, i32* %4, align 4
  ret i32 %54
}

declare dso_local i32 @is_valid_cs(i32) #1

declare dso_local i32 @roundup_pow_of_two(i32) #1

declare dso_local i32 @ilog2(i32) #1

declare dso_local i32 @spin_lock_irqsave(i32*, i64) #1

declare dso_local i32 @bcm_mpi_writel(i32, i32) #1

declare dso_local i32 @MPI_CSBASE_REG(i32) #1

declare dso_local i32 @spin_unlock_irqrestore(i32*, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
